welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: illegal start of simple expression
    if (max2<max)){
                 ^